--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
     {% if site.title or site.author %}
       <li>{{- site.title | default: site.author -}}. 所有歌词的分角色信息均为Kamui整理</li>
     {% endif %}
-    <li>Jekyll模板: <a href="https://chrisbobbe.github.io/">Prologue</a></li>
+    <li>Jekyll模板: <a href="https://github.com/chrisbobbe/jekyll-theme-prologue">Prologue</a></li>
   </ul>
   
 </div>
