代码优化测试，以后commit信息还是写中文吧，要不然干了什么自己都看不明白（淦

--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -204,6 +204,38 @@
 		clear: both;
 	}
 
+/* Characters */
+
+	/* LoveLive! */
+
+	a.honoka{color: #ffae00;}
+	a.umi{color: #0475c5;}
+	a.kotori{color: #dbdad6;}
+	a.hanayo{color: #019a64;}
+	a.rin{color: #fce33e;}
+	a.maki{color: #e7452c;}
+	a.nico{color: #e44386;}
+	a.eli{color: #55c2ed;}
+	a.nozomi{color: #7c318e;}
+
+	/* LoveLive! Sunshine!! */
+
+	a.chika{color: #f39801;}
+	a.riko{color: #f3b4fa;}
+	a.you{color: #4bbcee;}
+	a.ruby{color: #f050b4;}
+	a.hanamaru{color: #fedd3a;}
+	a.yoshiko{color: #c9c9c9;}
+	a.kanan{color: #5bd8b0;}
+	a.dia{color: #d71617;}
+	a.mari{color: #a36fd1;}
+	a.seira{color: #0033ff;}
+	a.ria{color: #bbbbbb;}
+
+	/* Miscellaneous */
+
+	a.notation{color: #8b4513;}
+
 /* Sections/Article */
 
 	section, article {
