试图让下划线gck

--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -208,33 +208,33 @@
 
 	/* LoveLive! */
 
-	a.honoka{color: #ffae00;}
-	a.umi{color: #0475c5;}
-	a.kotori{color: #dbdad6;}
-	a.hanayo{color: #019a64;}
-	a.rin{color: #fce33e;}
-	a.maki{color: #e7452c;}
-	a.nico{color: #e44386;}
-	a.eli{color: #55c2ed;}
-	a.nozomi{color: #7c318e;}
+	a.honoka{color: #ffae00;text-decoration: none;}
+	a.umi{color: #0475c5;text-decoration: none;}
+	a.kotori{color: #dbdad6;text-decoration: none;}
+	a.hanayo{color: #019a64;text-decoration: none;}
+	a.rin{color: #fce33e;text-decoration: none;}
+	a.maki{color: #e7452c;text-decoration: none;}
+	a.nico{color: #e44386;text-decoration: none;}
+	a.eli{color: #55c2ed;text-decoration: none;}
+	a.nozomi{color: #7c318e;text-decoration: none;}
 
 	/* LoveLive! Sunshine!! */
 
-	a.chika{color: #f39801;}
-	a.riko{color: #f3b4fa;}
-	a.you{color: #4bbcee;}
-	a.ruby{color: #f050b4;}
-	a.hanamaru{color: #fedd3a;}
-	a.yoshiko{color: #c9c9c9;}
-	a.kanan{color: #5bd8b0;}
-	a.dia{color: #d71617;}
-	a.mari{color: #a36fd1;}
-	a.seira{color: #0033ff;}
-	a.ria{color: #bbbbbb;}
+	a.chika{color: #f39801;text-decoration: none;}
+	a.riko{color: #f3b4fa;text-decoration: none;}
+	a.you{color: #4bbcee;text-decoration: none;}
+	a.ruby{color: #f050b4;text-decoration: none;}
+	a.hanamaru{color: #fedd3a;text-decoration: none;}
+	a.yoshiko{color: #c9c9c9;text-decoration: none;}
+	a.kanan{color: #5bd8b0;text-decoration: none;}
+	a.dia{color: #d71617;text-decoration: none;}
+	a.mari{color: #a36fd1;text-decoration: none;}
+	a.seira{color: #0033ff;text-decoration: none;}
+	a.ria{color: #bbbbbb;text-decoration: none;}
 
 	/* Miscellaneous */
 
-	a.notation{color: #8b4513;}
+	a.notation{color: #8b4513;text-decoration: none;}
 
 /* Sections/Article */
 
