--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -208,7 +208,8 @@
 
 	/* LoveLive! */
 
-	a.honoka{color: #ffae00; text-decoration: none;}
+	a.honoka{color: #ffae00;}
+	a.honoka:link{text-decoration: none;}
 	a.umi{color: #0475c5; text-decoration: none;}
 	a.kotori{color: #dbdad6; text-decoration: none;}
 	a.hanayo{color: #019a64; text-decoration: none;}
