Revert "三回啊三回"
This reverts commit 8ff023e79edd8414d5236c422987a3477bb48087.

--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -208,8 +208,7 @@
 
 	/* LoveLive! */
 
-	a.honoka{color: #ffae00;}
-	a.honoka:link{text-decoration: none;}
+	a.honoka{color: #ffae00; text-decoration: none;}
 	a.umi{color: #0475c5; text-decoration: none;}
 	a.kotori{color: #dbdad6; text-decoration: none;}
 	a.hanayo{color: #019a64; text-decoration: none;}
