万万没想到居然是用这个玩意实现的下划线，绝

--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -208,33 +208,33 @@
 
 	/* LoveLive! */
 
-	a.honoka{color: #ffae00; text-decoration: none;}
-	a.umi{color: #0475c5; text-decoration: none;}
-	a.kotori{color: #dbdad6; text-decoration: none;}
-	a.hanayo{color: #019a64; text-decoration: none;}
-	a.rin{color: #fce33e; text-decoration: none;}
-	a.maki{color: #e7452c; text-decoration: none;}
-	a.nico{color: #e44386; text-decoration: none;}
-	a.eli{color: #55c2ed; text-decoration: none;}
-	a.nozomi{color: #7c318e; text-decoration: none;}
+	a.honoka{color: #ffae00; border-bottom: none;}
+	a.umi{color: #0475c5; border-bottom: none;}
+	a.kotori{color: #dbdad6; border-bottom: none;}
+	a.hanayo{color: #019a64; border-bottom: none;}
+	a.rin{color: #fce33e; border-bottom: none;}
+	a.maki{color: #e7452c; border-bottom: none;}
+	a.nico{color: #e44386; border-bottom: none;}
+	a.eli{color: #55c2ed; border-bottom: none;}
+	a.nozomi{color: #7c318e; border-bottom: none;}
 
 	/* LoveLive! Sunshine!! */
 
-	a.chika{color: #f39801; text-decoration: none;}
-	a.riko{color: #f3b4fa; text-decoration: none;}
-	a.you{color: #4bbcee; text-decoration: none;}
-	a.ruby{color: #f050b4; text-decoration: none;}
-	a.hanamaru{color: #fedd3a; text-decoration: none;}
-	a.yoshiko{color: #c9c9c9; text-decoration: none;}
-	a.kanan{color: #5bd8b0; text-decoration: none;}
-	a.dia{color: #d71617; text-decoration: none;}
-	a.mari{color: #a36fd1; text-decoration: none;}
-	a.seira{color: #0033ff; text-decoration: none;}
-	a.ria{color: #bbbbbb; text-decoration: none;}
+	a.chika{color: #f39801; border-bottom: none;}
+	a.riko{color: #f3b4fa; border-bottom: none;}
+	a.you{color: #4bbcee; border-bottom: none;}
+	a.ruby{color: #f050b4; border-bottom: none;}
+	a.hanamaru{color: #fedd3a; border-bottom: none;}
+	a.yoshiko{color: #c9c9c9; border-bottom: none;}
+	a.kanan{color: #5bd8b0; border-bottom: none;}
+	a.dia{color: #d71617; border-bottom: none;}
+	a.mari{color: #a36fd1; border-bottom: none;}
+	a.seira{color: #0033ff; border-bottom: none;}
+	a.ria{color: #bbbbbb; border-bottom: none;}
 
 	/* Miscellaneous */
 
-	a.notation{color: #8b4513; text-decoration: none;}
+	a.notation{color: #8b4513; border-bottom: none;}
 
 /* Sections/Article */
 
