--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -210,7 +210,7 @@
 
 	a.honoka{color: #ffae00; border-bottom: none;}
 	a.umi{color: #0475c5; border-bottom: none;}
-	a.kotori{color: #dbdad6; border-bottom: none;}
+	a.kotori{color: #c5c4c1; border-bottom: none;}
 	a.hanayo{color: #019a64; border-bottom: none;}
 	a.rin{color: #fce33e; border-bottom: none;}
 	a.maki{color: #e7452c; border-bottom: none;}
