--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -225,12 +225,12 @@
 	a.you{color: #4bbcee; border-bottom: none;}
 	a.ruby{color: #f050b4; border-bottom: none;}
 	a.hanamaru{color: #fedd3a; border-bottom: none;}
-	a.yoshiko{color: #c9c9c9; border-bottom: none;}
+	a.yoshiko{color: #b5b5b5; border-bottom: none;}
 	a.kanan{color: #5bd8b0; border-bottom: none;}
 	a.dia{color: #d71617; border-bottom: none;}
 	a.mari{color: #a36fd1; border-bottom: none;}
 	a.seira{color: #0033ff; border-bottom: none;}
-	a.ria{color: #bbbbbb; border-bottom: none;}
+	a.ria{color: #969696; border-bottom: none;}
 
 	/* Miscellaneous */
 
