--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -208,7 +208,7 @@
 
 	/* LoveLive! */
 
-	a.honoka{color: #ff9d00; border-bottom: none;}
+	a.honoka{color: #ff8b00; border-bottom: none;}
 	a.umi{color: #0475c5; border-bottom: none;}
 	a.kotori{color: #c5c4c1; border-bottom: none;}
 	a.hanayo{color: #019a64; border-bottom: none;}
