加入大量邦邦应援色（但未经测试）

--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -238,6 +238,51 @@
 	a.cool{color: #136bfb; border-bottom: none;}
 	a.passion{color: #fda929; border-bottom: none;}
 
+	/* BanG_Dream */
+
+	a.t_kasumi{color: #ff5522; border-bottom: none;}
+	a.h_tae{color: #0077dd; border-bottom: none;}
+	a.u_rimi{color: #ff55bb; border-bottom: none;}
+	a.y_saaya{color: #ffcc11; border-bottom: none;}
+	a.i_arisa{color: #aa66dd; border-bottom: none;}
+
+	a.m_ran{color: #ee0022; border-bottom: none;}
+	a.a_moca{color: #00ccaa; border-bottom: none;}
+	a.u_himari{color: #ff9999; border-bottom: none;}
+	a.u_tomoe{color: #bb0033; border-bottom: none;}
+	a.h_tugumi{color: #ffee88; border-bottom: none;}
+
+	a.m_aya{color: #ff88bb; border-bottom: none;}
+	a.h_hina{color: #55ddee; border-bottom: none;}
+	a.s_chisato{color: #ffeeaa; border-bottom: none;}
+	a.y_maya{color: #99dd88; border-bottom: none;}
+	a.w_eve{color: #ddbbff; border-bottom: none;}
+
+	a.m_yukina{color: #881188; border-bottom: none;}
+	a.h_sayo{color: #00aabb; border-bottom: none;}
+	a.i_lisa{color: #dd2200; border-bottom: none;}
+	a.u_ako{color: #dd0088; border-bottom: none;}
+	a.s_rinko{color: #bbbbbb; border-bottom: none;}
+
+	a.t_kokoro{color: #ffee22; border-bottom: none;}
+	a.s_kaoru{color: #aa33cc; border-bottom: none;}
+	a.k_hagumi{color: #ff9922; border-bottom: none;}
+	a.m_kanon{color: #44ddff; border-bottom: none;}
+	a.o_misaki{color: #006599; border-bottom: none;}
+	a.michelle{color: #dd33cc; border-bottom: none;}
+
+	a.k_mashiro{color: #6677cc; border-bottom: none;}
+	a.k_touko{color: #ee6666; border-bottom: none;}
+	a.h_nanami{color: #ee7744; border-bottom: none;}
+	a.h_tukushi{color: #ee7788; border-bottom: none;}
+	a.y_rui{color: #669988; border-bottom: none;}
+
+	a.layer{color: #cc0000; border-bottom: none;}
+	a.lock{color: #aaee22; border-bottom: none;}
+	a.masking{color: #eebb44; border-bottom: none;}
+	a.pareo{color: #ff99bb; border-bottom: none;}
+	a.chuchu{color: #00bbff; border-bottom: none;}
+
 	/* Miscellaneous */
 
 	a.notation{color: #8b4513; border-bottom: none;}
