プロセカ测试，你们能不能整点阳间颜色啊（

--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -283,6 +283,40 @@
 	a.pareo{color: #ff99bb; border-bottom: none;}
 	a.chuchu{color: #00bbff; border-bottom: none;}
 
+	/* Project SEKAI*/
+
+	a.h_miku{color: #39c5bb; border-bottom: none;}
+	a.m_luka{color: #faafbe; border-bottom: none;}
+	a.k_rin{color: #ffa500; border-bottom: none;}
+	a.k_ren{color: #ffe211; border-bottom: none;}
+	a.meiko{color: #d80000; border-bottom: none;}
+	a.kaito{color: #0000ff; border-bottom: none;}
+
+	a.h_ichika{color: #33aaee; border-bottom: none;}
+	a.t_saki{color: #ffdd44; border-bottom: none;}
+	a.m_honami{color: #ee6666; border-bottom: none;}
+	a.h_shiho{color: #bbdd22; border-bottom: none;}
+
+	a.h_minori{color: #ffccaa; border-bottom: none;}
+	a.k_haruka{color: #99ccff; border-bottom: none;}
+	a.m_airi{color: #ffaacc; border-bottom: none;}
+	a.h_shizuku{color: #99eedd; border-bottom: none;}
+
+	a.a_konahe{color: #ff6699; border-bottom: none;}
+	a.s_an{color: #00bbdd; border-bottom: none;}
+	a.s_akito{color: #ff7722; border-bottom: none;}
+	a.a_touya{color: #0077dd; border-bottom: none;}
+
+	a.t_tsukasa{color: #ffbb00; border-bottom: none;}
+	a.o_emu{color: #ff66bb; border-bottom: none;}
+	a.k_nene{color: #33dd99; border-bottom: none;}
+	a.k_rui{color: #bb88ee; border-bottom: none;}
+
+	a.y_kanade{color: #bb6688; border-bottom: none;}
+	a.a_mafuyu{color: #8888cc; border-bottom: none;}
+	a.s_ena{color: #ccaa88; border-bottom: none;}
+	a.a_mizuki{color: #ddaacc; border-bottom: none;}
+
 	/* Miscellaneous */
 
 	a.notation{color: #8b4513; border-bottom: none;}
